[gd_scene load_steps=4 format=3 uid="uid://cc3x0e03i1200"]

[ext_resource type="Script" path="res://scenes/bullet.gd" id="1_antnj"]
[ext_resource type="Texture2D" uid="uid://dm8dgh4bvtle0" path="res://textures/bullet.png" id="1_gxxfh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s8kyx"]
radius = 3.16228

[node name="bullet" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_antnj")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 7.85398
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_gxxfh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_s8kyx")

[node name="KillTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
